corpus/decls_func.txt
===========
Function declaration - no params
===========

void() NoParamFunction1;

---

(source_file
    (function_declaration
        (simple_type)
        (parameter_list)
        (identifier)))

===========
Function declaration - multiple params
===========

float(entity param1, entity param2) TestFunction4;

---

(source_file
    (function_declaration
        (simple_type)
        (parameter_list
                (simple_type)
                (identifier)
                (simple_type)
                (identifier))
         (identifier)))
